Bug 385676 - k3b-master/src/projects/k3bvcdburndialog.cpp:62: lots of missing breaks ?
Summary: k3b-master/src/projects/k3bvcdburndialog.cpp:62: lots of missing breaks ?
Status: RESOLVED FIXED
Alias: None
Product: k3b
Classification: Applications
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: K3b Bugs
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2017-10-12 19:43 UTC by dcb314
Modified: 2017-10-13 03:15 UTC (History)
3 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description dcb314 2017-10-12 19:43:54 UTC
switch ( m_vcdDoc->vcdType() ) {
    case K3b::VcdDoc::VCD11:
        vcdType = i18n( "Video CD (Version 1.1)" );
    case K3b::VcdDoc::VCD20:
        vcdType = i18n( "Video CD (Version 2.0)" );
    case K3b::VcdDoc::SVCD10:
        vcdType = i18n( "Super Video CD" );
    case K3b::VcdDoc::HQVCD:
        vcdType = i18n( "High-Quality Video CD" );
    default:
        vcdType = i18n( "Video CD" );
    }

Whoever wrote this seemingly didn't test it AND isn't very
familiar with coding in C++.

Suggest code rework, preferably by an experienced C++ programmer.
Comment 1 Leslie Zhai 2017-10-13 03:15:11 UTC
Git commit d6686bb0ce07601f2f980cdf001c472ea37e027e by Leslie Zhai.
Committed on 13/10/2017 at 03:13.
Pushed by lesliezhai into branch 'master'.

Fix switch stmt missing break issue.

A patch by dcb314@hotmail.com!

M  +10   -6    src/projects/k3bvcdburndialog.cpp

https://commits.kde.org/k3b/d6686bb0ce07601f2f980cdf001c472ea37e027e