Fix switch stmt missing break issue.

A patch by dcb314@hotmail.com!

BUG: 385676